feat: update access_recipient_expired transactional

--- a/packages/backend-modules/mail/templates/access_recipient_expired.html
+++ b/packages/backend-modules/mail/templates/access_recipient_expired.html
@@ -49,92 +49,29 @@
                       dem {{GRANT_BEGIN}} waren Sie zu Gast an Bord der
                       Republik.{{/if}}
                     </p>
-                    <p>Hat Ihnen unser Magazin gefallen?</p>
-                    <p>
-                      Ganz gleich, wie oft Sie uns gelesen haben: Wir hoffen,
-                      dass wir Sie immer wieder erfolgreich überzeugen,
-                      herausfordern, informieren, erfreuen und vielleicht das
-                      ein oder andere Mal ärgern konnten.
-                    </p>
-                    <p>
-                      Wie Sie wissen, ist die Republik werbefrei und wird von
-                      ihren Leserinnen und Lesern finanziert. Es kommt also auf
-                      jede einzelne Person an. Deshalb würden wir uns sehr
-                      freuen, Sie als Teil unserer Verlagsetage und Mitglied der
-                      Republik-Community willkommen zu heissen.
-                    </p>
-
-                    <p>Sie haben hierfür verschiedene Möglichkeiten:</p>
-
-                    <ol
-                      style="color:#282828;font-size:17px;line-height:24px;{{sg_font_style_sans_serif_regular}}"
+                    <p> Heute endet Ihre Probefahrt – aber wir würden uns sehr freuen, Sie bald wieder bei uns begrüssen zu dürfen! </p>
+                    <table
+                      width="100%"
+                      border="0"
+                      cellspacing="0"
+                      cellpadding="0"
                     >
-                      <li>
-                        <a href="{{link_offer_abo}}"
-                          >Die Jahresmitgliedschaft</a
-                        >
-                        für CHF 240.–/Jahr
-                        <p
-                          style="color:#282828;font-size:14px;line-height:20px;{{sg_font_style_sans_serif_regular}}"
-                        >
-                          Mit dieser Mitgliedschaft erhalten Sie unabhängigen
-                          und werbefreien Qualitätsjournalismus und sind Teil
-                          der Republik-Community. Gleichzeitig sind Sie Mitglied
-                          der Project R Genossenschaft – und damit Mitbesitzerin
-                          der Republik.
-                        </p>
-                      </li>
-                      <li>
-                        <a href="{{link_offer_monthly_abo}}"
-                          >Das Monatsabonnement</a
-                        >
-                        für CHF 22.–/Monat
-                        <p
-                          style="color:#282828;font-size:14px;line-height:20px;{{sg_font_style_sans_serif_regular}}"
-                        >
-                          Mit diesem Abo erhalten Sie Zugang zum Magazin und zum
-                          Dialog – ohne dass Sie Teil unserer Genossenschaft
-                          werden. Das Abonnement verlängert sich automatisch,
-                          kann aber jederzeit und ohne Frist gekündigt werden.
-                        </p>
-                      </li>
-                      <li>
-                        <a href="{{link_offer_benefactor}}"
-                          >Die Gönnermitgliedschaft</a
-                        >
-                        ab CHF 1000.–/Jahr
-                        <p
-                          style="color:#282828;font-size:14px;line-height:20px;{{sg_font_style_sans_serif_regular}}"
-                        >
-                          Mit der Gönnermitgliedschaft erhalten Sie Zugang zum
-                          vollständigen Republik-Angebot, ein Extra-Dankeschön
-                          und die Gewissheit, einen sehr wichtigen Beitrag zur
-                          Erhaltung einer freien, demokratischen Öffentlichkeit
-                          geleistet zu haben – denn Ihre Grosszügigkeit
-                          ermöglicht es, die Republik auch Personen zugänglich
-                          zu machen, die sich eine volle Mitgliedschaft nicht
-                          leisten könnten. Zudem sind Sie Teil der
-                          Republik-Community und Mitglied der Project R
-                          Genossenschaft.
-                        </p>
-                      </li>
-                      <li>
-                        <a href="{{link_offer_reduced_ausbildung}}"
-                          >Die Ausbildungsmitgliedschaft</a
-                        >
-                        für CHF 140.–/Jahr
-                        <p
-                          style="color:#282828;font-size:14px;line-height:20px;{{sg_font_style_sans_serif_regular}}"
-                        >
-                          Mit dieser Mitgliedschaft erhalten alle Auszubildenden
-                          und Studierenden Zugang zum vollständigen
-                          Republik-Angebot inklusive
-                          Genossenschafts-Mitgliedschaft – zu einem
-                          vergünstigten Preis.
-                        </p>
-                      </li>
-                    </ol>
-                    <p>Sehen wir uns?</p>
+                      <tr>
+                        <td>
+                          <table border="0" cellspacing="0" cellpadding="0">
+                            <tr>
+                              <td align="center" bgcolor="#3CAD00">
+                                <a
+                                  href="{{link_offers_overview}}"
+                                  style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
+                                  >Dabei bleiben</a
+                                >
+                              </td>
+                            </tr>
+                          </table>
+                        </td>
+                      </tr>
+                    </table>
                     <p>
                       Bei Fragen oder wenn Sie Unterstützung brauchen, helfen
                       wir Ihnen unter
