--- a/packages/backend-modules/mail/templates/access_recipient_expired.html
+++ b/packages/backend-modules/mail/templates/access_recipient_expired.html
@@ -64,7 +64,7 @@
                                 <a
                                   href="{{link_offers_overview}}"
                                   style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >Dabei bleiben</a
+                                  >Zu den Angeboten</a
                                 >
                               </td>
                             </tr>
