feat: updated text recipient onboarding trial campaign mail

--- a/packages/backend-modules/mail/templates/access_recipient_onboarding.html
+++ b/packages/backend-modules/mail/templates/access_recipient_onboarding.html
@@ -43,8 +43,7 @@
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
                     <p>
-                      Und herzlich willkommen! Wir freuen uns sehr, Sie bei der
-                      Republik begrüssen zu dürfen.
+                      Und herzlich willkommen! Sie haben sich erfolgreich für eine Probefahrt bei der Republik angemeldet.
                     </p>
 
                     {{#if recipientIsNotGranter}}
@@ -59,63 +58,7 @@
                     {{/if}}
 
                     <p>
-                      Nachfolgend finden Sie die wichtigsten Informationen zur
-                      Republik in der Übersicht:
-                    </p>
-                    <ul
-                      style="color:#282828;font-size:17px;line-height:24px;{{sg_font_style_sans_serif_regular}}"
-                    >
-                      <li>
-                        <p>
-                          Die Republik erscheint von Montag bis Samstag mit
-                          täglich ein bis drei neuen Beiträgen. In der
-                          <a href="{{link_app}}">Republik-App</a>,
-                          <a href="{{frontend_base_url}}">auf der Website</a>
-                          und als Newsletter – welche Newsletter und
-                          Benachrichtigungen Sie von uns erhalten, können Sie
-                          <a href="{{link_account}}">in Ihrem Konto</a>
-                          festlegen.
-                        </p>
-                      </li>
-                      <li>
-                        <p>
-                          Sie möchten wissen, wer die Menschen hinter der
-                          Republik sind? Lernen Sie unsere Crew kennen:
-                          <a href="{{link_imprint}}">Wir sind Ihr Team</a>.
-                        </p>
-                      </li>
-                      <li>
-                        <p>
-                          Hinter der Republik steht kein Verlag, sondern rund
-                          29’000 Verlegerinnen – wir gehören unseren Lesern, die
-                          als Mitglieder der Project R Genossenschaft auch immer
-                          wieder mitentscheiden. Die Leserinnen sind es auch,
-                          die uns finanzieren – denn die Republik ist komplett
-                          werbefrei. Für mehr Details zu den Hintergründen und
-                          unserer Mission
-                          <a href="{{link_about}}">klicken Sie hier</a>.
-                        </p>
-                      </li>
-                    </ul>
-                    <p>
-                      Wenn Ihnen die Idee hinter unserem Projekt und unser
-                      Magazin gefallen, gibt es verschiedene Möglichkeiten, wie
-                      auch Sie ein Teil davon werden können:
-                      <a href="{{link_offers_overview}}"
-                        >Auf der Angebotsseite</a
-                      >
-                      finden Sie die Abonnemente und Mitgliedschaften in der
-                      Übersicht.
-                    </p>
-                    <p>
-                      Haben Sie Fragen oder brauchen Sie Unterstützung? Unter
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
-                      helfen wir Ihnen gerne weiter.
-                    </p>
-                    <p>
-                      Und nun wünschen wir Ihnen viel Freude mit der Republik.
+                      Wir wünschen Ihnen viel Freude beim Lesen und Ausprobieren!
                     </p>
                     <p>Ihre Crew der Republik</p>
                   </td>
