feat: updated text recipient expired

--- a/packages/backend-modules/mail/templates/access_recipient_expired.html
+++ b/packages/backend-modules/mail/templates/access_recipient_expired.html
@@ -49,7 +49,7 @@
                       dem {{GRANT_BEGIN}} waren Sie zu Gast an Bord der
                       Republik.{{/if}}
                     </p>
-                    <p> Heute endet Ihre Probefahrt – aber wir würden uns sehr freuen, Sie bald wieder bei uns begrüssen zu dürfen! </p>
+                    <p> Ihre Probefahrt ist beendet – aber wir würden uns sehr freuen, Sie bald wieder bei uns begrüssen zu dürfen! </p>
                     <table
                       width="100%"
                       border="0"
