fix(lobbywatch): update t30 mail

--- a/packages/backend-modules/mail/templates/de/membership_owner_prolong_notice.html
+++ b/packages/backend-modules/mail/templates/de/membership_owner_prolong_notice.html
@@ -118,23 +118,15 @@
                       interessierten Bürger:innen jederzeit nachschauen können,
                       wer in der Schweizer Politik die Fäden zieht.
                     </p>
-                    <!-- ToDo: remove next two paragraphs for generic version -->
-                    <p>
-                      Zurzeit arbeiten wir an zwei grösseren Projekten, für die
-                      wir auf Unterstützung besonders angewiesen sind: Im
-                      September publizieren wir die Transparenzliste 2023. Hier
-                      listen wir auf, wer seine/ihre Entschädigungen offenlegt
-                      und sich folglich transparent verhält – aus unserer Sicht
-                      eine wichtige Wahlhilfe.
-                    </p>
+                    <!-- ToDo: remove next paragraphs for generic version -->
                     <p>
                       Gemeinsam mit dem Recherchekollektiv WAV, dem
                       Recherchenetzwerk investigativ.ch und OpenData Schweiz
-                      lancieren wir zudem gerade das Projekt «Das Geld und die
-                      Politik». Auf dieser Plattform präsentieren wir in
-                      verständlicher und übersichtlicher Form, welche Personen
-                      und Organisationen wie viel Geld in die Wahlkämpfe
-                      stecken.
+                      haben wir zudem das Projekt «Das Geld und die Politik»
+                      lanciert. Auf dieser Plattform moneyinpolitics.ch
+                      präsentieren wir in verständlicher und übersichtlicher
+                      Form, welche Personen und Organisationen wie viel Geld in
+                      die Wahlkämpfe stecken.
                     </p>
                     <p>Sie haben nun die Wahl:</p>
                     <ul
