--- a/packages/backend-modules/mail/templates/fr/membership_owner_prolong_notice.html
+++ b/packages/backend-modules/mail/templates/fr/membership_owner_prolong_notice.html
@@ -118,16 +118,8 @@
                       intéressés puissent voir à tout moment qui est aux
                       commandes de la politique suisse.
                     </p>
-                    <!-- ToDo: remove next two paragraphs for generic version -->
-                    <p>
-                      Actuellement, nous travaillons sur deux grands projets
-                      pour lesquels nous avons besoin de soutien : En septembre,
-                      nous publierons la liste de transparence 2023. Nous y
-                      énumérons les candidats qui publient leurs indemnités et
-                      se comportent de manière transparente. Nous pensons qu'il
-                      s'agit d'une aide importante pour les élections.
-                    </p>
-                    <p>
+                    <!-- ToDo: Re-add after updated verion is translated, remove in 2023 -->
+                    <!-- <p>
                       En collaboration avec le collectif de recherche WAV, le
                       réseau de recherche investigativ.ch et opendata.ch, nous
                       lançons également le projet "L'argent et la politique".
@@ -135,7 +127,7 @@
                       compréhensible, quelles personnes et organisations
                       investissent combien d'argent dans les campagnes
                       électorales.
-                    </p>
+                    </p> -->
                     <p>Vous avez maintenant le choix :</p>
                     <ul
                       style="
