fix(lobbywatch): re-enable auto pay charging

--- a/packages/backend-modules/mail/templates/de/membership_owner_prolong_notice.html
+++ b/packages/backend-modules/mail/templates/de/membership_owner_prolong_notice.html
@@ -118,7 +118,7 @@
                       interessierten Bürger:innen jederzeit nachschauen können,
                       wer in der Schweizer Politik die Fäden zieht.
                     </p>
-                    <!-- ToDo: remove next paragraphs for generic version -->
+                    <!-- ToDo: remove next paragraph for generic version -->
                     <p>
                       Gemeinsam mit dem Recherchekollektiv WAV, dem
                       Recherchenetzwerk investigativ.ch und OpenData Schweiz
