fix(lobbywatch): charge date and French cc

--- a/packages/backend-modules/mail/templates/de/membership_owner_autopay_notice.html
+++ b/packages/backend-modules/mail/templates/de/membership_owner_autopay_notice.html
@@ -83,7 +83,7 @@
                       Diese E-Mail informiert Sie darüber, dass wir dies in
                       {{days_left}} Tagen tatsächlich tun werden: Ihre
                       {{autopay_card_brand}} mit den Endziffern
-                      {{autopay_card_last4}} belasten wir am {{end_date}} mit
+                      {{autopay_card_last4}} belasten wir am {{days_left_end_date}} mit
                       {{autopay_total}}.
                     </p>
                     <p>
