--- a/packages/backend-modules/mail/templates/fr/membership_owner_autopay_notice.html
+++ b/packages/backend-modules/mail/templates/fr/membership_owner_autopay_notice.html
@@ -83,9 +83,9 @@
                     </p>
                     <p>
                       Cet e-mail vous informe que nous le ferons dans
-                      {{days_left}}jours : votre {{autopay_card_brand}} avec les
+                      {{days_left}} jours : votre {{autopay_card_brand}} avec les
                       chiffres finaux {{autopay_card_last4}}, sera débité le
-                      {{end_date}} de {{autopay_total}}.
+                      {{days_left_end_date}} de {{autopay_total}}.
                     </p>
                     <p>
                       Si vous souhaitez nous faire un don supplémentaire,
