feat(lobbywatch): membership overdue mail

--- a/packages/backend-modules/mail/templates/de/membership_owner_prolong_overdue.html
+++ b/packages/backend-modules/mail/templates/de/membership_owner_prolong_overdue.html
@@ -60,20 +60,19 @@
               width="100%"
               style="
                 max-width: 640px;
-                color: #000;
-                font-size: 17px;
-                line-height: 24px;
+                color: #444;
+                font-size: 18px;
                 font-family: Roboto, sans-serif;
               "
             >
               <tbody>
                 <tr>
                   <td style="padding: 20px">
-                    <p>Bonjour</p>
+                    <p>Guten Tag</p>
                     <p>
-                      Votre cotisation de membre pour cette année est due. Nous
-                      vous remercions de votre soutien. Grâce à votre aide, nous
-                      pouvons assurer la transparence au Palais fédéral.
+                      Ihre Mitgliedschaft bei Lobbywatch ist am {{end_date}}
+                      ausgelaufen. Vielen Dank, dass Sie uns bisher unterstützt
+                      haben! Dürfen wir weitere 12 Monate auf Sie zählen?
                     </p>
                     <table
                       width="100%"
@@ -99,7 +98,7 @@
                                     border: 1px solid #0077d7;
                                     display: inline-block;
                                   "
-                                  >Renouveler maintenant</a
+                                  >Mitglied bleiben</a
                                 >
                               </td>
                             </tr>
@@ -108,26 +107,26 @@
                       </tr>
                     </table>
                     <p>
-                      Au cours des dernières années, Lobbywatch est devenu un
-                      acteur établi de la vie politique suisse. Nous regardons
-                      de près qui représente quels intérêts au Palais fédéral.
-                      Nous demandons combien nos parlementaires gagnent avec
-                      leurs activités (de lobbying) pour des associations et des
-                      entreprises. Et nous publions toutes nos recherches sur
-                      notre site Internet - afin que tous les citoyens
-                      intéressés puissent voir à tout moment qui est aux
-                      commandes de la politique suisse.
+                      Lobbywatch hat sich in den vergangenen Jahren zu einer
+                      anerkannten Grösse im Schweizer Politleben entwickelt. Wir
+                      schauen genau hin, wer im Bundeshaus wessen Interessen
+                      vertritt. Wir fragen nach, wie viel unsere
+                      Parlamentarier:innen mit ihren (Lobby-)Tätigkeiten für
+                      Verbände und Unternehmen verdienen. Und wir publizieren
+                      alle unsere Recherchen auf unserer Website – damit alle
+                      interessierten Bürger:innen jederzeit nachschauen können,
+                      wer in der Schweizer Politik die Fäden zieht.
                     </p>
                     <p>
-                      En collaboration avec le collectif de recherche WAV, le
-                      réseau de recherche investigativ.ch et OpenData Suisse,
-                      nous venons de lancer le projet “L’argent et la
-                      politique”. Sur cette plateforme moneyinpolitics.ch, nous
-                      présentons de manière compréhensible et claire quelles
-                      personnes et organisations investissent combien d’argent
-                      dans les campagnes électorales.
+                      Gemeinsam mit dem Recherchekollektiv WAV, dem
+                      Recherchenetzwerk investigativ.ch und OpenData Schweiz
+                      haben wir zudem gerade das Projekt «Das Geld und die
+                      Politik» lanciert. Auf dieser Plattform moneyinpolitics.ch
+                      präsentieren wir in verständlicher und übersichtlicher
+                      Form, welche Personen und Organisationen wie viel Geld in
+                      die Wahlkämpfe stecken.
                     </p>
-                    <p>Vous avez maintenant le choix :</p>
+                    <p>Sie haben nun die Wahl:</p>
                     <ul
                       style="
                         color: #000;
@@ -138,27 +137,27 @@
                     >
                       <li>
                         <a href="{{prolong_url}}"
-                          >Vous restez avec nous et continuez à soutenir
-                          Lobbywatch : vous payez ici la facture pour une année
-                          supplémentaire.
+                          >Sie bleiben dabei und unterstützen Lobbywatch
+                          weiterhin: Hier bezahlen Sie die Rechnung für ein
+                          weiteres Jahr.
                         </a>
                       </li>
                       <li>
                         <a href="{{cancel_url}}"
-                          >Vous ne souhaitez plus soutenir Lobbywatch ? Ici vous
-                          pouvez mettre fin à votre adhésion</a
+                          >Sie möchten Lobbywatch nicht mehr unterstützen? Hier
+                          können Sie Ihre Mitgliedschaft beendigen</a
                         >
-                        et, si vous le souhaitez, nous le faire savoir pourquoi.
+                        und, wenn Sie möchten, uns mitteilen, warum.
                       </li>
                     </ul>
                     <p>
-                      Quelle que soit votre décision : Nous vous remercions de
-                      votre engagement et de votre confiance !
+                      Wie auch immer Sie entscheiden: Vielen Dank für Ihr
+                      Engagement und Ihr Vertrauen!
                     </p>
                     <p>
-                      Avec nos meilleures salutations<br />
+                      Mit freundlichen Grüssen<br />
                       Thomas Angeli & Otto Hostettler<br />
-                      Co-présidents de Lobbywatch
+                      Co-Präsidenten Lobbywatch
                     </p>
                   </td>
                 </tr>
@@ -186,7 +185,7 @@
                       />
                       <br />
                       Lobbywatch.ch<br />
-                      3000 Berne<br />
+                      3000 Bern<br />
                       <a href="mailto:info@lobbywatch.ch">info@lobbywatch.ch</a>
                     </p>
                   </td>
