--- a/packages/backend-modules/mail/templates/fr/membership_owner_prolong_overdue.html
+++ b/packages/backend-modules/mail/templates/fr/membership_owner_prolong_overdue.html
@@ -71,9 +71,10 @@
                   <td style="padding: 20px">
                     <p>Bonjour</p>
                     <p>
-                      Votre cotisation de membre pour cette année est due. Nous
-                      vous remercions de votre soutien. Grâce à votre aide, nous
-                      pouvons assurer la transparence au Palais fédéral.
+                      Votre adhésion à Lobbywatch a expiré le {{end_date}}. Nous
+                      vous remercions de nous avoir soutenus jusqu’à présent !
+                      Pouvons-nous compter sur vous pour 12 mois supplémentaires
+                      ?
                     </p>
                     <table
                       width="100%"
@@ -99,7 +100,7 @@
                                     border: 1px solid #0077d7;
                                     display: inline-block;
                                   "
-                                  >Renouveler maintenant</a
+                                  >Rester membre</a
                                 >
                               </td>
                             </tr>
@@ -109,14 +110,14 @@
                     </table>
                     <p>
                       Au cours des dernières années, Lobbywatch est devenu un
-                      acteur établi de la vie politique suisse. Nous regardons
-                      de près qui représente quels intérêts au Palais fédéral.
-                      Nous demandons combien nos parlementaires gagnent avec
-                      leurs activités (de lobbying) pour des associations et des
-                      entreprises. Et nous publions toutes nos recherches sur
-                      notre site Internet - afin que tous les citoyens
-                      intéressés puissent voir à tout moment qui est aux
-                      commandes de la politique suisse.
+                      acteur reconnu de la vie politique suisse. Nous regardons
+                      de près qui défend les intérêts de qui au Palais fédéral.
+                      Nous cherchons à savoir combien nos parlementaires gagnent
+                      avec leurs activités (de lobbying) pour des associations
+                      et des entreprises. Et nous publions toutes nos recherches
+                      sur notre site Internet - afin que tous les citoyens
+                      intéressés puissent vérifier à tout moment qui tire les
+                      ficelles de la politique suisse.
                     </p>
                     <p>
                       En collaboration avec le collectif de recherche WAV, le
@@ -139,14 +140,14 @@
                       <li>
                         <a href="{{prolong_url}}"
                           >Vous restez avec nous et continuez à soutenir
-                          Lobbywatch : vous payez ici la facture pour une année
+                          Lobbywatch : Vous payez ici la facture pour une année
                           supplémentaire.
                         </a>
                       </li>
                       <li>
                         <a href="{{cancel_url}}"
-                          >Vous ne souhaitez plus soutenir Lobbywatch ? Ici vous
-                          pouvez mettre fin à votre adhésion</a
+                          >Vous ne souhaitez plus soutenir Lobbywatch ? Vous
+                          pouvez annuler votre adhésion ici</a
                         >
                         et, si vous le souhaitez, nous le faire savoir pourquoi.
                       </li>
