fix(Transactionals): edits

--- a/packages/backend-modules/mail/templates/membership_deactivated_abo_give_months_uncancelled.html
+++ b/packages/backend-modules/mail/templates/membership_deactivated_abo_give_months_uncancelled.html
@@ -65,25 +65,19 @@
                     </table>
                     <br />
                     <hr />
-                    <p>Guten Tag</p>
+                    <p>Guten Tag, {name}</p>
                     <p>
-                      Schade, sind Sie nicht mehr Teil der Republik und der Idee
-                      hinter unserem Projekt!
+                      Aus, finito, das wars. Ihr Abonnement wurde deaktiviert.
                     </p>
                     <p>
-                      Wir haben Ihnen eine E-Mail zur Verlängerung Ihres
-                      Abonnements geschickt, aber darauf keine Antwort erhalten.
-                      Einen Zahlungseingang für die Verlängerung Ihres
-                      Abonnements können wir bis heute auch nicht verzeichnen.
+                      Und wir fragen uns: Wie sind wir bloss an diesem Punkt gelandet?
                     </p>
                     <p>
-                      Deshalb verlieren Ihre Zugangsdaten ab sofort leider ihre
-                      Gültigkeit.
+                      Falls es ein Missverständnis war, dann können Sie es hier sofort ungeschehen machen:
                     </p>
                     <p>
-                      Wenn Sie schlicht unsere E-Mails übersehen haben – lösen
-                      Sie jetzt eine Jahresmitgliedschaft. Das dauert nicht
-                      einmal drei Minuten.
+                      Wenn Sie schlicht alle E-Mails übersehen haben –
+                      reaktivieren Sie jetzt Ihre Mitgliedschaft.
                     </p>
                     <table
                       width="100%"
@@ -97,9 +91,9 @@
                             <tr>
                               <td align="center" bgcolor="#3CAD00">
                                 <a
-                                  href="{{link_offer_abo}}"
+                                  href="{{prolong_url}}"
                                   style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >Jahresmitgliedschaft kaufen</a
+                                  >Jetzt meine Mitgliedschaft reaktivieren</a
                                 >
                               </td>
                             </tr>
@@ -108,32 +102,24 @@
                       </tr>
                     </table>
                     <p>
-                      Falls Sie uns lieber kurzfristiger unterstützen wollen,
-                      gibt es die Möglichkeit, ein
-                      <a href="{{link_offer_monthly_abo}}">Monatsabo</a> zu
-                      kaufen. Das kostet nur CHF 22 im Monat, wird Ihrer
-                      Kreditkarte belastet und verlängert sich automatisch –
-                      kann dabei aber jederzeit und ohne Frist gekündigt werden.
+                      In nur zwei Minuten wird so aus einem abrupten Ende ein fulminanter Neustart. Und Sie stellen sicher, dass unser Journalismus eine Zukunft hat.
                     </p>
                     <p>
-                      Und wenn Sie einen finanziellen Engpass haben, schreiben
-                      Sie uns auf
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
-                      – Journalismus kostet zwar, doch wir wollen niemanden
-                      ausschliessen: Wir finden eine Lösung.
+                      Ihre Crew der Republik
                     </p>
                     <p>
-                      Sollte uns hingegen ein Fehler unterlaufen sein, nehmen
-                      Sie bitte ebenfalls so schnell wie möglich Kontakt mit uns
-                      auf:
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >.
+                      PS: Journalismus kostet zwar, doch wir wollen niemanden ausschliessen. Wenn Sie einen 
+                      begründeten finanziellen Engpass haben sollten, können Sie Ihren Mitgliedschaftsbeitrag 
+                      selbst bestimmen. <a href="{{prolong_url}}">Ihren Mitgliedschaftsbeitrag selbst bestimmen</a>.
                     </p>
-                    <p>Herzlich</p>
-                    <p>Ihre Crew der Republik</p>
+                    <p>PPS: Halt, stopp, Sie haben Ihre Mitgliedschaft bereits bezahlt? Dann muss 
+                      uns ein Fehler unterlaufen sein. Nehmen Sie bitte so schnell wie möglich 
+                      Kontakt mit uns auf: <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>.
+                    </p>
+                    <p>PPPS: Falls Sie sich bewusst gegen das Bleiben entschieden haben, dann haben 
+                      wir eine letzte Bitte: Nennen Sie uns zum Abschied Ihre Gründe? Sie kennen uns 
+                      mittlerweile so gut, dass Ihnen womöglich etwas aufgefallen ist, was wir übersehen haben.
+                    </p>
                   </td>
                 </tr>
                 <tr>
