--- a/packages/backend-modules/mail/templates/payment_reminder_last_abo_give_months.html
+++ b/packages/backend-modules/mail/templates/payment_reminder_last_abo_give_months.html
@@ -42,16 +42,16 @@
                 <tr>
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
-                    <p>Schön, dass Sie die Republik unterstützen wollen.</p>
+                    <p>Ihr Mitgliedschafts- oder Unterstützungsbeitrag in der Höhe von CHF {{total}} ist weiterhin ausstehend.</p>
                     <p>
-                      Falls sich unsere Buchhaltung nicht irrt, ist Ihr
-                      Mitgliedschafts- oder Unterstützungsbeitrag in der Höhe
-                      von CHF {{total}} aber weiterhin ausstehend.
+                      Wenn wir Ihre Zahlung in den nächsten 30 Tagen nicht erhalten, gehen wir davon aus, dass Sie die Republik 
+                      nicht mehr lesen möchten, und deaktivieren Ihr Abo und Ihre Mitgliedschaft.
                     </p>
                     <p>
-                      Dürfen wir Sie freundlich bitten, den Betrag in den
-                      nächsten Tagen zu überweisen? Unser Projekt ist auf Ihren
-                      Beitrag angewiesen.
+                      Doch so weit muss es nicht kommen.
+                    </p>
+                    <p>
+                      Es gibt eine bessere Alternative: sofort die Rechnung bezahlen und dabeibleiben!
                     </p>
                     <p>Zahlungsinformationen:</p>
                     <ul
@@ -74,12 +74,6 @@
                       <a href="mailto:kontakt@republik.ch"
                         >kontakt@republik.ch</a
                       >.
-                    </p>
-                    <p>
-                      Wenn wir Ihre Zahlung in den nächsten 30 Tagen nicht
-                      erhalten, gehen wir davon aus, dass Sie die Republik nicht
-                      mehr lesen möchten, und deaktivieren Ihr Abo und Ihre
-                      Mitgliedschaft.
                     </p>
                     <p>Herzlich<br />Ihre Crew der Republik</p>
                   </td>
