--- a/packages/backend-modules/mail/templates/payment_reminder_yearly_abo.html
+++ b/packages/backend-modules/mail/templates/payment_reminder_yearly_abo.html
@@ -42,36 +42,15 @@
                 <tr>
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
+                    <p>Wir finden es grossartig, dass Sie die Republik unterstützen.</p>
                     <p>
-                      Schön, dass Sie die Republik unterstützen. Und das zu
-                      einem Preis, der für Sie passt.
+                      Nun hat sich allerdings unsere Buchhaltung mit dem Hinweis gemeldet, Ihr Mitgliedschafts-
+                      oder Unterstützungsbeitrag in der Höhe von CHF {{total}} sei noch ausstehend.
                     </p>
                     <p>
-                      Mit Ihrem neuen Abo erhalten Sie sechsmal pro Woche ein
-                      unabhängiges und werbefreies digitales Magazin für
-                      Politik, Wirtschaft, Gesellschaft und Kultur.
+                      Dürfen wir Sie freundlich bitten, den Betrag in den nächsten Tagen zu überweisen?
                     </p>
-                    <p>
-                      Sie fördern aber auch eine wirklich unabhängige vierte
-                      Gewalt als zentrale Institution unserer Demokratie.
-                    </p>
-                    <p>
-                      Denn: Die Republik steht für die Verteidigung der
-                      demokratischen Institutionen und die Werte der Aufklärung.
-                      Für Treue zu Fakten, für Lösungen von Fall zu Fall, für
-                      Offenheit gegenüber Kritik, für Respektlosigkeit gegenüber
-                      der Macht und Respekt vor dem Menschen.
-                    </p>
-                    <p>
-                      Falls sich unsere Buchhaltung nicht irrt, ist allerdings
-                      der von Ihnen gewählte Abo-Beitrag in Höhe von CHF
-                      {{total}} noch ausstehend.
-                    </p>
-                    <p>
-                      Dürfen wir Sie freundlich bitten, den Betrag in den
-                      nächsten Tagen zu überweisen?
-                    </p>
-                    <p>Zahlungsinformationen:</p>
+                    <p>Hier noch einmal die Zahlungsinformationen:</p>
                     <ul
                       style="color:#282828;font-size:17px;line-height:24px;{{sg_font_style_sans_serif_regular}}"
                     >
