fix(Transactionals): fix errors

--- a/packages/backend-modules/mail/templates/membership_deactivated_abo_give_months_uncancelled.html
+++ b/packages/backend-modules/mail/templates/membership_deactivated_abo_give_months_uncancelled.html
@@ -93,7 +93,7 @@
                                 <a
                                   href="{{prolong_url}}"
                                   style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >Jetzt meine Mitgliedschaft reaktivieren</a
+                                  >Jetzt eine Jahresmitgliedschaft lösen </a
                                 >
                               </td>
                             </tr>
