--- a/packages/backend-modules/mail/templates/membership_deactivated_abo_uncancelled.html
+++ b/packages/backend-modules/mail/templates/membership_deactivated_abo_uncancelled.html
@@ -73,11 +73,8 @@
                       Und wir fragen uns: Wie sind wir bloss an diesem Punkt gelandet?
                     </p>
                     <p>
-                      Falls es ein Missverständnis war, dann können Sie es hier sofort ungeschehen machen:
-                    </p>
-                    <p>
-                      Wenn Sie schlicht alle E-Mails übersehen haben –
-                      reaktivieren Sie jetzt Ihre Mitgliedschaft.
+                      Falls es ein Missverständnis war, dann können Sie es hier sofort 
+                      ungeschehen machen:
                     </p>
                     <table
                       width="100%"
@@ -102,7 +99,8 @@
                       </tr>
                     </table>
                     <p>
-                      In nur zwei Minuten wird so aus einem abrupten Ende ein fulminanter Neustart. Und Sie stellen sicher, dass unser Journalismus eine Zukunft hat.
+                      In nur zwei Minuten wird so aus einem abrupten Ende ein fulminanter 
+                      Neustart. Und Sie stellen sicher, dass unser Journalismus eine Zukunft hat.
                     </p>
                     <p>
                       Ihre Crew der Republik
